made scrollbar always appear to fix horizontal position of page content

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1,3 +1,7 @@
+body {
+	overflow-y: scroll;
+}
+
 div.website-header {
 	text-align: center;
 	height: 247px;
